# orc

./: .gitignore  LICENSE.md  PLAN.md  README.md  initial_idea.md  orc_plan.md  pyproject.toml  status-monitor-plan.md
container/: Dockerfile
lua/orc/: grid.lua  init.lua  prompt.lua  signal.lua  spaces.lua  ui.lua
plugin/: orc.lua
roles/: merger.md  orchestrator.md  system.md  worker.md
src/orc/: backend.py  cli.py  config.py  dashboard.py  project.py  roles.py  room.py  sandbox.py  service.py  terminal.py  tmux.py  universe.py  web.py
src/orc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/orc/static/: app.js  index.html
src/orc/web/: __init__.py  server.py  terminal.py
src/orc/web/static/: app.js  index.html  styles.css
