[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orc"
version = "0.1.0"
description = "CLI for orchestrating AI coding agents"
requires-python = ">=3.11"
dependencies = ["click>=8.0", "rich>=13.0", "websockets>=15.0"]

[project.scripts]
orc = "orc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
orc = ["static/**/*"]
